--- a/gunicorn.conf
+++ b/gunicorn.conf
@@ -1,3 +1,3 @@
 [program:gunicorn]
-command=/usr/bin/gunicorn hello:app -b localhost:5000
+command=/usr/bin/gunicorn wsgi:application -b localhost:5000 -c gunicorn.conf
 directory=/deploy/app
