--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,7 +1,40 @@
-Flask==0.10.1
-Jinja2==2.7.3
-MarkupSafe==0.23
-Werkzeug==0.10.4
-argparse==1.2.1
-itsdangerous==0.24
-wsgiref==0.1.2
+aniso8601==6.0.0
+attrs==19.1.0
+bravado==10.3.2
+bravado-core==5.11.0
+certifi==2019.3.9
+chardet==3.0.4
+Click==7.0
+flasgger==0.9.2
+Flask==1.0.2
+flask-restplus==0.9.2
+Flask-SQLAlchemy==2.1
+gevent==1.4.0
+greenlet==0.4.15
+gunicorn==19.9.0
+idna==2.8
+itsdangerous==1.1.0
+Jinja2==2.10
+jsonpointer==2.0
+jsonref==0.2
+jsonschema==3.0.1
+MarkupSafe==1.1.1
+mistune==0.8.4
+monotonic==1.5
+msgpack-python==0.5.6
+psycopg2-binary==2.8.2
+pyrsistent==0.14.11
+python-dateutil==2.8.0
+pytz==2018.9
+PyYAML==5.1
+requests==2.21.0
+rfc3987==1.3.8
+simplejson==3.16.0
+six==1.12.0
+SQLAlchemy==1.3.1
+strict-rfc3339==0.7
+swagger-spec-validator==2.4.3
+typing-extensions==3.7.2
+urllib3==1.24.1
+webcolors==1.8.1
+Werkzeug==0.15.1
